--- a/css/media.css
+++ b/css/media.css
@@ -168,6 +168,7 @@ p { font-size: 1.6rem; text-align: justify; }
 
 .display-block-tab { display: block; }
 .container-fluid { padding: 30px 15px; }
+.padding-0-tab { padding: 0; }
 .section-heading > h3 { font-size: 2.4rem; margin-bottom: 30px; }
 .section-heading > h2 { font-size: 3rem; margin-bottom: 30px; }
 p { text-align: justify; }
@@ -178,6 +179,7 @@ p { text-align: justify; }
 
 .bg-logo-navbar-menu-desktop { padding: 15px; }
 .header-logo-desktop > a > p { font-size: 1.6rem; }
+.menu-listing-desktop { justify-content: flex-end; }
 .menu-listing-desktop > li { margin-right: 15px; }
 .menu-listing-desktop > li > a { font-size: 1.6rem; }
 .veg-non-veg-listing { display: none; }
@@ -239,6 +241,7 @@ p { text-align: justify; }
   /*------- Common CSS Starts -------*/
 
 .container-fluid { padding: 50px 15px; }
+.padding-0-tab { padding: 0; }
 .section-heading > h3 { font-size: 2.4rem; margin-bottom: 30px; }
 .section-heading > h2 { font-size: 3rem; margin-bottom: 30px; }
 p { text-align: justify; }
@@ -248,6 +251,8 @@ p { text-align: justify; }
   /*------- Desktop Logo and Navbar Menu Section Starts -------*/
 
 .bg-logo-navbar-menu-desktop { padding: 30px 15px; }
+.menu-listing-desktop { justify-content: flex-end; }
+.veg-non-veg-listing { display: none; }
 
   /*------- Desktop Logo and Navbar Menu Section Ends -------*/
 
